--- a/PushSharp.Apple/packages.config
+++ b/PushSharp.Apple/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HttpTwo" version="0.0.1.19" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="PushSharp.Core" version="4.1.0" targetFramework="net45" />
 </packages>
