--- a/PushSharp.Core/PushSharp.Core.csproj
+++ b/PushSharp.Core/PushSharp.Core.csproj
@@ -1,49 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2B44A8DA-60BC-4577-A2D7-D9D53F164B2E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>PushSharp.Core</RootNamespace>
-    <AssemblyName>PushSharp.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\PushSharp-Signing.snk</AssemblyOriginatorKeyFile>
+    <TargetFrameworks>netstandard2.0;net45;net46</TargetFrameworks>
+    <PackageProjectUrl>https://github.com/sgyy/PushSharp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sgyy/PushSharp.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.txt</PackageLicenseUrl>
+    <Version>4.1.0</Version>
+    <Company />
+    <Authors>sgyy</Authors>
+    <PackageIconUrl>https://github.com/sgyy/PushSharp/apns-http2/Resources/PushSharp-Icon-NuGet.png</PackageIconUrl>
+    <PackageReleaseNotes>多平台支持</PackageReleaseNotes>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="INotification.cs" />
-    <Compile Include="IServiceConnection.cs" />
-    <Compile Include="NotificationBlockingCollection.cs" />
-    <Compile Include="IServiceBroker.cs" />
-    <Compile Include="ServiceBroker.cs" />
-    <Compile Include="ServiceBrokerConfiguration.cs" />
-    <Compile Include="IServiceConnectionFactory.cs" />
-    <Compile Include="Exceptions.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="PushHttpClient.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+
 </Project>
