--- a/PushSharp.Tests/packages.config
+++ b/PushSharp.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="PushSharp.Core" version="4.1.0" targetFramework="net45" />
 </packages>
