--- a/PushSharp.Apple/PushSharp.Apple.csproj
+++ b/PushSharp.Apple/PushSharp.Apple.csproj
@@ -1,68 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9D99F80-FEEB-4E74-96C5-66F17103C773}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>PushSharp.Apple</RootNamespace>
-    <AssemblyName>PushSharp.Apple</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\PushSharp-Signing.snk</AssemblyOriginatorKeyFile>
+    <TargetFrameworks>netstandard2.0;net45;net46</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="HttpTwo, Version=1.0.5858.36836, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\HttpTwo.0.0.1.19\lib\net45\HttpTwo.dll</HintPath>
-    </Reference>
-    <Reference Include="HttpTwo.HPack, Version=1.0.5858.36836, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\HttpTwo.0.0.1.19\lib\net45\HttpTwo.HPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="PushSharp.Core, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PushSharp.Core.4.1.0\lib\net45\PushSharp.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Net.Http" />
+    <PackageReference Include="HttpTwo" Version="1.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="PushSharp.Core" Version="4.1.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ApnsServiceConnection.cs" />
-    <Compile Include="ApnsConnection.cs" />
-    <Compile Include="ApnsConfiguration.cs" />
-    <Compile Include="ApnsNotification.cs" />
-    <Compile Include="ApnsFeedbackService.cs" />
-    <Compile Include="Exceptions.cs" />
-    <Compile Include="ApnsHttp2Configuration.cs" />
-    <Compile Include="ApnsHttp2Connection.cs" />
-    <Compile Include="ApnsHttp2Exceptions.cs" />
-    <Compile Include="ApnsHttp2Notification.cs" />
-    <Compile Include="ApnsHttp2ServiceConnection.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
+
 </Project>
